<package>
	<name>ardrone_tutorials</name>
	<version>1.0.0</version>
	<description>
		Controllers developed for the "Up and flying with the AR.Drone and ROS" tutorial series
	</description>
	<maintainer email="connorlee77@gmail.com">Connor Lee</maintainer>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<run_depend>ardrone_autonomy</run_depend>
	<run_depend>joy</run_depend>
	
	<license>BSD</license>
	<url>http://github.com/connorlee77/ardrone_stateestimation</url>
</package>


